<resources>
    <string name="app_name">Episodate</string>
    <string name="tv_shows_most_popular">Episodate | TV Shows</string>
    <string name="read_more">Read More</string>
    <string name="read_less">Read Less</string>
    <string name="u2022">•</string>
    <string name="website">Website</string>
    <string name="episode">Episode</string>
    <string name="seasons">Seasons</string>
    <string name="remove_from_watchlist">remove from watchlist</string>
    <string name="watchlist">Watchlist</string>
    <string name="empty">Empty</string>
    <string name="search_tvshows">Search TVShow</string>
    <string name="no_internet">No internet</string>
    <string name="search">Search</string>
</resources>