<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="isLoadingMore"
            type="Boolean" />

        <import type="android.view.View"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary"
        tools:context=".activities.MainActivity">

        <LinearLayout
            android:id="@+id/toolbar_tvShow"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/tv_shows_most_popular"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_14ssp" />

            <ImageView
                android:id="@+id/imageSearch"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:contentDescription="@string/app_name"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_search"
                app:tint="@color/colorTextIcons" />

            <ImageView
                android:id="@+id/imageWatchlist"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:contentDescription="@string/app_name"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_watchlist"
                app:tint="@color/colorTextIcons" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tvShow_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_6sdp"
            android:fitsSystemWindows="true"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:paddingBottom="@dimen/_40sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_tvShow" />

        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:indeterminateTint="@color/colorAccent"
            android:visibility='@{isLoading ? View.VISIBLE : View.GONE, default=gone}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_tvShow"/>

        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:indeterminateTint="@color/colorAccent"
            android:visibility='@{isLoadingMore ? View.VISIBLE : View.GONE, default=gone}'
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/imageNoInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_wifi_off"
                app:tint="@color/colorTextSecondary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:text="@string/no_internet"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/_20ssp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

