<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="isLoadingMore"
            type="Boolean" />

        <import type="android.view.View"/>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary"
        tools:context=".activities.SearchActivity">

        <LinearLayout
            android:id="@+id/searchActionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:contentDescription="@string/app_name"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_back"
                app:tint="@color/colorTextIcons"/>

            <EditText
                android:id="@+id/searchInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:padding="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/search_tvshows"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:background="@drawable/background_search_tvshow"
                android:inputType="text"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/background_cursor"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/colorTextIcons"
                android:textColorHint="@color/colorTextSecondary"/>

            <ImageView
                android:id="@+id/imageSearch"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:contentDescription="@string/app_name"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/ic_search"
                app:tint="@color/colorTextIcons"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_6sdp"
            android:fitsSystemWindows="true"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:paddingBottom="@dimen/_40sdp"
            app:layout_constraintTop_toBottomOf="@+id/searchActionBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:indeterminateTint="@color/colorAccent"
            android:visibility='@{isLoading ? View.VISIBLE : View.GONE, default=gone}'
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchActionBar"/>

        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:indeterminateTint="@color/colorAccent"
            android:visibility='@{isLoadingMore ? View.VISIBLE : View.GONE, default=gone}'
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/imageSearchEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_search"
                app:tint="@color/colorTextSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:text="@string/search"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/_20ssp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>